rm cached output files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Prerequisites
 *.d
-
+data/
 # Compiled Object files
 *.slo
 *.lo
@@ -49,7 +49,7 @@ mono_crash.*
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
+x64-Release/
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
