--- a/.gitignore
+++ b/.gitignore
@@ -356,6 +356,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+*.sln
+*.pyproj
 
 # Cake - Uncomment if you are using it
 # tools/**
